--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="SyncRoomChatToolV2.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ModelView="clr-namespace:SyncRoomChatToolV2.ModelView"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SyncRoomChatToolV2"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -11,6 +12,10 @@
     Height="450"
     Style="{StaticResource MaterialDesignWindow}"
     mc:Ignorable="d">
+
+    <Window.DataContext>
+        <ModelView:MainWindowViewModel />
+    </Window.DataContext>
 
     <Window.Background>
         <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
@@ -65,14 +70,23 @@
                             <RowDefinition Height="28" MinHeight="28" />
                         </Grid.RowDefinitions>
                         <TextBox
-                            x:Name="textBox"
+                            x:Name="chatLog"
+                            Grid.Row="0"
+                            Margin="0,31,0,0"
+                            VerticalContentAlignment="Bottom"
+                            local:TextBoxBehaviors.AutoScrollToEnd="True"
+                            FontSize="14"
+                            IsReadOnly="True"
+                            Text="{Binding Info.ChatLog, UpdateSourceTrigger=PropertyChanged}"
+                            VerticalScrollBarVisibility="Auto" />
+                        <TextBox
+                            x:Name="chatInput"
                             Grid.Row="2"
                             Width="Auto"
                             VerticalAlignment="Center"
                             FontSize="14"
-                            Text="TextBox"
+                            Text="チャット入力は未実装。"
                             TextWrapping="Wrap" />
-
                     </Grid>
 
                 </Border>
@@ -153,12 +167,12 @@
                             Height="22"
                             AutomationProperties.Name="HamburgerToggleButton"
                             Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
+                        <!--
                         <Button
                             x:Name="StartButton"
                             Margin="12,0,0,0"
                             Padding="4,4,4,4"
                             VerticalAlignment="Center"
-                            Click="StartButton_Click"
                             Content="監視開始"
                             FontSize="10" />
                         <Button
@@ -166,9 +180,9 @@
                             Margin="12,0,0,0"
                             Padding="4,4,4,4"
                             VerticalAlignment="Center"
-                            Click="StopButton_Click"
                             Content="監視終了"
                             FontSize="10" />
+                        -->
                     </VirtualizingStackPanel>
                 </DockPanel>
 
@@ -176,10 +190,10 @@
             </materialDesign:ColorZone>
         </materialDesign:DrawerHost>
         <StatusBar VerticalAlignment="Bottom">
-            <Label
+            <TextBlock
                 x:Name="StatusMessage1"
                 HorizontalAlignment="Left"
-                Content="システムメッセージ。" />
+                Text="{Binding Info.SysInfo, UpdateSourceTrigger=PropertyChanged}" />
         </StatusBar>
     </Grid>
 
