--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -111,7 +111,8 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="2" />
-                            <RowDefinition Height="28" MinHeight="28" />
+                            <RowDefinition Height="32" MinHeight="32" />
+
                         </Grid.RowDefinitions>
                         <TextBox
                             x:Name="chatLog"
@@ -122,15 +123,25 @@
                             IsReadOnly="True"
                             Text="{Binding Info.ChatLog, UpdateSourceTrigger=PropertyChanged}"
                             VerticalScrollBarVisibility="Auto" />
+                        <!--
                         <TextBox
                             x:Name="ChatInput"
                             Grid.Row="2"
                             Width="Auto"
                             VerticalAlignment="Center"
+                            d:Text="チャット入力も実装。"
                             FontSize="14"
                             KeyDown="ChatInput_KeyDown"
-                            Text="チャット入力は未実装。"
                             TextWrapping="Wrap" />
+                        -->
+
+                        <ComboBox
+                            x:Name="ChatInputCombo"
+                            Grid.Row="2"
+                            FontSize="14"
+                            IsEditable="True"
+                            KeyDown="ChatInputCombo_KeyDown" />
+
                     </Grid>
 
                 </Border>
