--- a/UserControls/Member.xaml
+++ b/UserControls/Member.xaml
@@ -16,7 +16,8 @@
                 <Image
                     Width="30"
                     Height="30"
-                    Margin="0,2,0,0" />
+                    Margin="0,2,0,0"
+                    Source="{Binding MemberImage, UpdateSourceTrigger=PropertyChanged}" />
             </VirtualizingStackPanel>
             <VirtualizingStackPanel>
                 <VirtualizingStackPanel Margin="2,0,0,0" Orientation="Vertical">
