--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -107,10 +107,10 @@
                     Background="White">
                     <!--  上部右側の画面のコンテンツをここに配置  -->
 
-                    <Grid>
+                    <Grid Margin="0,0,0,1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
-                            <RowDefinition Height="2" />
+                            <RowDefinition Height="4" />
                             <RowDefinition Height="32" MinHeight="32" />
 
                         </Grid.RowDefinitions>
@@ -122,7 +122,7 @@
                             FontSize="18"
                             IsReadOnly="True"
                             Text="{Binding Info.ChatLog, UpdateSourceTrigger=PropertyChanged}"
-                            VerticalScrollBarVisibility="Auto" />
+                            VerticalScrollBarVisibility="Auto" Margin="0,0,0,1" />
                         <!--
                         <TextBox
                             x:Name="ChatInput"
@@ -138,6 +138,13 @@
                         <ComboBox
                             x:Name="ChatInputCombo"
                             Grid.Row="2"
+                            materialDesign:HintAssist.Hint="チャット入力可能です。右クリックも使えます。"
+                            materialDesign:HintAssist.IsFloating="True"
+                            materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
+                            materialDesign:TextFieldAssist.HasClearButton="True"
+                            materialDesign:TextFieldAssist.HasOutlinedTextField="True"
+                            materialDesign:TextFieldAssist.TextFieldCornerRadius="3"
+                            materialDesign:TextFieldAssist.UnderlineBrush="Black"
                             FontSize="14"
                             IsEditable="True"
                             KeyDown="ChatInputCombo_KeyDown" />
@@ -148,7 +155,6 @@
             </Grid>
 
         </Grid>
-
         <materialDesign:DrawerHost IsLeftDrawerOpen="{Binding IsChecked, ElementName=MenuToggleButton}">
             <materialDesign:DrawerHost.LeftDrawerContent>
                 <DockPanel MinWidth="220">
@@ -268,12 +274,6 @@
                         Orientation="Horizontal"
                         VirtualizingPanel.IsVirtualizing="true"
                         VirtualizingPanel.VirtualizationMode="Recycling">
-                        <ToggleButton
-                            x:Name="MenuToggleButton"
-                            Width="22"
-                            Height="22"
-                            AutomationProperties.Name="HamburgerToggleButton"
-                            Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
                         <!--
                         <Button
                             x:Name="StartButton"
@@ -290,6 +290,12 @@
                             Content="監視終了"
                             FontSize="10" />
                         -->
+                        <ToggleButton
+                            x:Name="MenuToggleButton"
+                            Width="22"
+                            Height="22"
+                            AutomationProperties.Name="HamburgerToggleButton"
+                            Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
                     </VirtualizingStackPanel>
                 </DockPanel>
 
