--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
     xmlns:prop="clr-namespace:SyncRoomChatToolV2.Properties"
     xmlns:view="clr-namespace:SyncRoomChatToolV2.UserControls"
     Title="SyncRoom読み上げちゃん V2"
-    Width="400"
+    Width="600"
     Height="450"
     Style="{StaticResource MaterialDesignWindow}"
     Topmost="{Binding WindowTopMost, Source={x:Static prop:Settings.Default}}"
@@ -119,7 +119,7 @@
                             ItemsSource="{Binding Chats, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, NotifyOnTargetUpdated=True}"
                             ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                             ScrollViewer.IsDeferredScrollingEnabled="True"
-                            ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto"
                             SelectionMode="Single"
                             TargetUpdated="ChatViewYourSelf_TargetUpdated"
                             VirtualizingPanel.IsVirtualizing="True"
@@ -331,7 +331,7 @@
                             FontSize="10" />
                         <Button
                             x:Name="StopButton"
-                            Margin="12,0,0,0"
+                            Margin="0,0,0,0"
                             Padding="4,4,4,4"
                             VerticalAlignment="Center"
                             Content="監視終了"
